对pub-sub-domain配置 此提出疑问

--- a/activemqdemo4/src/main/resources/application.yml
+++ b/activemqdemo4/src/main/resources/application.yml
@@ -38,7 +38,7 @@ spring:
       auto-startup: true
       concurrency: 5
       max-concurrency: 10
-    # 是否开启发布订阅
+    # 是否开启发布订阅  疑问.默认是不开启的,那如何配置两种同时使用呢??????????????????????
     pub-sub-domain: false
     template:
       # 默认的目的地
