添加多个队列和多个发布订阅的配置方式

--- a/activemqdemo6/src/main/resources/application.yml
+++ b/activemqdemo6/src/main/resources/application.yml
@@ -5,3 +5,8 @@ spring:
   jms:
     pub-sub-domain: true
 
+# 队列和订阅目的地
+topicDestinationName1:
+topicDestinationName2:
+queueDestinationName1:
+queueDestinationName2:
