--- a/activemqdemo6/src/main/resources/application.yml
+++ b/activemqdemo6/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     pub-sub-domain: true
 
 # 队列和订阅目的地
-topicDestinationName1:
-topicDestinationName2:
-queueDestinationName1:
-queueDestinationName2:
+topicDestinationName1: my-test-topic1
+topicDestinationName2: my-test-topic2
+queueDestinationName1: my-test-queue1
+queueDestinationName2: my-test-queue2
